// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataTypeControl renders as expected for sample data 1`] = `
<DocumentFragment>
  .c3 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
  vertical-align: middle;
  width: 2em;
  height: 2em;
}

.c0 {
  width: inherit;
  height: inherit;
  display: inherit;
  -webkit-flex-direction: inherit;
  -ms-flex-direction: inherit;
  flex-direction: inherit;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: rgb(78,23,91);
  cursor: pointer;
  font-family: plex-sans,sans-serif;
  line-height: 1.6em;
  font-size: 8pt;
  line-height: 1.2em;
}

.c2 {
  background: rgb(255,255,255);
  margin: 0px 8px 0px 4px;
  color: rgb(209,14,102);
  border-radius: 50%;
  border: none;
  cursor: pointer;
  position: relative;
  padding: 4px;
  z-index: 2;
}

.c4 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  background: rgb(121,27,137);
  border-radius: 8px;
  color: rgb(255,255,255);
  padding: 4px 8px 4px 20px;
  margin: 4px 0px 4px -20px;
  text-align: left;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

<div
    class="c0"
  >
    <div
      class="c1"
      data-highlighted="false"
    >
      <button
        class="c2"
      >
        <span
          class="c3"
          role="img"
        >
          <svg
            viewBox="0 0 96.62 96.62"
          >
            <path
              d="M72.84 44.9a9.67 9.67 0 00-4.57 1.1 10.88 10.88 0 00.06-1.14 10.7 10.7 0 00-10.57-10.8A10.45 10.45 0 0049.64 38a13.31 13.31 0 00-12.25-8.31A13.46 13.46 0 0024.1 42.58a11.35 11.35 0 00-9.83 11.35c0 11.65 10 13.05 10.52 13.05H72.7c3.47 0 9.35-5.53 9.35-11.18s-3.69-10.9-9.21-10.9z"
              data-name="Layer 40"
              fill="none"
              stroke="currentColor"
              stroke-miterlimit="10"
              stroke-width="4"
            />
          </svg>
        </span>
      </button>
      <span
        class="c4"
      >
        test sample name
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DataTypeControl renders as expected for uploaded file 1`] = `
<DocumentFragment>
  .c3 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
  vertical-align: middle;
  width: 2em;
  height: 2em;
}

.c0 {
  width: inherit;
  height: inherit;
  display: inherit;
  -webkit-flex-direction: inherit;
  -ms-flex-direction: inherit;
  flex-direction: inherit;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: rgb(78,23,91);
  cursor: pointer;
  font-family: plex-sans,sans-serif;
  line-height: 1.6em;
  font-size: 8pt;
  line-height: 1.2em;
}

.c2 {
  background: rgb(255,255,255);
  margin: 0px 8px 0px 4px;
  color: rgb(209,14,102);
  border-radius: 50%;
  border: none;
  cursor: pointer;
  position: relative;
  padding: 4px;
  z-index: 2;
}

.c4 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  background: rgb(121,27,137);
  border-radius: 8px;
  color: rgb(255,255,255);
  padding: 4px 8px 4px 20px;
  margin: 4px 0px 4px -20px;
  text-align: left;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

<div
    class="c0"
  >
    <div
      class="c1"
      data-highlighted="false"
    >
      <button
        class="c2"
      >
        <span
          class="c3"
          role="img"
        >
          <svg
            viewBox="0 0 96 96"
          >
            <defs>
              <style>
                .doc_svg__cls-2{fill:none;stroke:currentColor;stroke-miterlimit:10;stroke-width:4px}
              </style>
            </defs>
            <g
              data-name="Layer 25"
              id="doc_svg__Layer_25"
            >
              <path
                d="M66.53 18.76a8 8 0 018 8v42.48a8 8 0 01-8 8H29.47a8 8 0 01-8-8V26.76a8 8 0 018-8h37.06m0-4H29.47a12 12 0 00-12 12v42.48a12 12 0 0012 12h37.06a12 12 0 0012-12V26.76a12 12 0 00-12-12z"
                fill="currentColor"
              />
              <path
                class="doc_svg__cls-2"
                d="M30.94 32.81h34.12M30.94 45h34.12M30.94 57.2h34.12"
              />
            </g>
          </svg>
        </span>
      </button>
      <span
        class="c4"
      >
        test filename
      </span>
    </div>
  </div>
</DocumentFragment>
`;
